<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@color/purple_background">


    <ImageView
        android:id="@+id/imageView"
        app:srcCompat="@drawable/logo"

        android:layout_width="111dp"
        android:layout_height="72dp"

        android:layout_marginTop="68dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRegFirstName"

        android:layout_width="0dp"
        android:layout_height="44dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="38dp"

        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"
        android:paddingStart="16dp"

        android:backgroundTint="@color/input_frame"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"

        android:hint="@string/first_name"
        android:textSize="14sp"
        android:inputType="text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextRegSecondName"

        android:layout_width="0dp"
        android:layout_height="44dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"

        android:paddingStart="16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"

        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"
        android:backgroundTint="@color/input_frame"

        android:textSize="14sp"
        android:hint="@string/second_name"
        android:inputType="text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegFirstName" />

    <EditText
        android:id="@+id/editTextRegEmail"

        android:layout_width="0dp"
        android:layout_height="44dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"

        android:paddingStart="16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"

        android:backgroundTint="@color/input_frame"
        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegSecondName" />

    <EditText
        android:id="@+id/editTextRegPassword"

        android:layout_width="0dp"
        android:layout_height="44dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"

        android:paddingStart="16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"

        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"
        android:backgroundTint="@color/input_frame"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegEmail" />

    <EditText
        android:id="@+id/editTextRegPasswordRepeat"

        android:layout_width="0dp"
        android:layout_height="44dp"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"

        android:paddingStart="16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"

        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"
        android:backgroundTint="@color/input_frame"

        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegPassword" />

    <Button
        android:id="@+id/finishRegButton"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"

        android:backgroundTint="@color/orange"
        android:textColor="@color/white"

        android:text="@string/register"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="false"

        app:cornerRadius="4dp"

        app:layout_constraintBottom_toTopOf="@+id/closeRegButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/closeRegButton"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"

        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"

        android:textColor="@color/orange"
        android:backgroundTint="@color/white_button"

        android:text="@string/i_already_have_an_account"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="false"

        app:cornerRadius="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>