<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpAlt">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/purple_background">

            <ImageView
                app:srcCompat="@drawable/logo"

                android:layout_width="207dp"
                android:layout_height="134dp"

                android:layout_marginTop="68dp" />

            <EditText
                android:id="@+id/editTextRegFirstName"

                android:layout_width="match_parent"
                android:layout_height="44dp"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="64dp"

                android:paddingTop="13dp"
                android:paddingEnd="16dp"
                android:paddingBottom="13dp"
                android:paddingStart="16dp"

                android:background="@drawable/edit_text_frame"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"

                android:hint="@string/first_name"
                android:textSize="14sp"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextRegSecondName"

                android:layout_width="match_parent"
                android:layout_height="44dp"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"

                android:paddingStart="16dp"
                android:paddingTop="13dp"
                android:paddingEnd="16dp"
                android:paddingBottom="13dp"

                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:background="@drawable/edit_text_frame"

                android:textSize="14sp"
                android:hint="@string/second_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextRegEmail"

                android:layout_width="match_parent"
                android:layout_height="44dp"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"

                android:paddingStart="16dp"
                android:paddingTop="13dp"
                android:paddingEnd="16dp"
                android:paddingBottom="13dp"

                android:background="@drawable/edit_text_frame"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"

                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextRegPassword"

                android:layout_width="match_parent"
                android:layout_height="44dp"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"

                android:paddingStart="16dp"
                android:paddingTop="13dp"
                android:paddingEnd="16dp"
                android:paddingBottom="13dp"

                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:background="@drawable/edit_text_frame"

                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextRegPasswordRepeat"

                android:layout_width="match_parent"
                android:layout_height="44dp"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"

                android:paddingStart="16dp"
                android:paddingTop="13dp"
                android:paddingEnd="16dp"
                android:paddingBottom="13dp"

                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:background="@drawable/edit_text_frame"

                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/finishRegButton"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="60dp"

                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"

                android:background="@drawable/button_frame"
                android:textColor="@color/white"

                android:text="@string/register"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center" />

            <Button
                android:id="@+id/closeRegButton"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="44dp"
                android:layout_marginTop="16dp"

                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"

                android:textColor="@color/orange"
                android:backgroundTint="@color/purple_background"

                android:text="@string/i_already_have_an_account"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"

                app:cornerRadius="4dp"
                app:strokeColor="@color/white_button_frame"
                app:strokeWidth="3dp" />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>