<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInAlt"
    android:background="@color/purple_background">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/logo"

        android:layout_width="207dp"
        android:layout_height="134dp"

        android:layout_marginTop="96dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLoginEmail"

        android:layout_width="0dp"
        android:layout_height="44dp"

        android:layout_marginTop="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"

        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"
        android:background="@drawable/edit_text_frame"

        android:textSize="14sp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextLoginPassword"

        android:layout_width="0dp"
        android:layout_height="44dp"

        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:paddingStart="16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"

        android:textColor="@color/white"
        android:textColorHint="@color/text_hint"
        android:background="@drawable/edit_text_frame"

        android:textSize="14sp"
        android:hint="@string/password"
        android:inputType="textPassword"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"

        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"

        android:background="@drawable/button_frame"
        app:cornerRadius="4dp"

        app:layout_constraintBottom_toTopOf="@+id/startRegButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startRegButton"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"

        android:backgroundTint="@color/purple_background"
        android:paddingStart="32dp"
        android:paddingTop="13dp"
        android:paddingEnd="32dp"

        android:paddingBottom="13dp"
        android:text="@string/registration"

        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:textStyle="bold"

        app:cornerRadius="4dp"
        app:strokeColor="@color/white_button_frame"
        app:strokeWidth="3dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>